--- a/style.css
+++ b/style.css
@@ -6,7 +6,9 @@ body {
 
 body {
   font-family:
-    Georgia, "PT Serif", serif;
+    Tahoma;
+  font-style: italic;
+  font-weight: bolder;
   color: rgb(255, 196, 0);
   overflow-x: hidden;
 
