--- a/style.css
+++ b/style.css
@@ -9,19 +9,20 @@ body {
     Tahoma;
   font-style: italic;
   font-weight: bolder;
-  color: rgb(255, 166, 0);
+  --font-color: rgb(255, 166, 0);
+  color: var(--font-color);
   overflow-x: hidden;
 
-  background: #00247e;
-  background-image: radial-gradient(#002d9e 1px, transparent 0);
-  background-size: 5px 5px;
+  background: #002991;
+  background-image: radial-gradient(#002d9d 5px, transparent 0);
+  background-size: 10px 10px;
   background-position: -19px -19px;
 
   hyphens: auto;
 }
 
 a {
-  color: rgb(255, 166, 0);
+  color: var(--font-color);
 }
 
 .main {
@@ -72,6 +73,23 @@ img {
 .logo {
   border-bottom: 1px solid;
   padding-bottom: 5px;
+}
+
+summary {
+  -webkit-user-select: none;
+  /* Safari */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* IE10+/Edge */
+  user-select: none;
+  /* Standard */
+}
+
+details>p {
+  border-top: solid;
+  border-bottom: solid;
+  padding: 5px 0;
 }
 
 /* Footer --------------------*/
