--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ img {
 /* topbar ------------------------------ */
 .topbar {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
 
   column-gap: 10%;
@@ -71,7 +71,8 @@ img {
 
 .topbar img {
   max-width: 50px;
-  min-width: 15%;
+  max-height: 50px;
+  width: 15%;
 }
 
 /* ........................................ */
@@ -80,6 +81,7 @@ img {
   margin: auto;
   width: 90%;
   aspect-ratio: 16 / 9;
+  max-height: 90vh;
 }
 
 .logo {
