--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ a {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 10px;
+  gap: 35px;
 }
 .mainblock {
   display: flex;
@@ -75,6 +75,21 @@ a {
   justify-content: space-between;
   max-width: 1000px;
   width: 100%;
+}
+/* Text */
+p,
+small {
+  margin-right: 2%;
+  margin-left: 2%;
+  margin-bottom: 0;
+}
+
+h1 {
+  font-family: verdana, sans-serif;
+  margin-bottom: 0;
+  font-style: italic;
+  font-weight: 1000;
+  color: rgb(255, 98, 0);
 }
 
 /* Images */
