meta juttuja lisää

--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ small {
 }
 
 h1 {
-  font-family: verdana, sans-serif;
+  font-family: Arial, sans-serif;
   margin-bottom: 0;
   font-style: italic;
   font-weight: 1000;
-  color: rgb(255, 98, 0);
+  color: rgb(255, 106, 0);
 }
 
 /* Images */
